Sample invoice template

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <span class="invoice-type child">
                     INVOICE
                 </span>
-                <img class="invoice-logo child" src="logo.png" alt="" width="100" height="100">
+                <img class="invoice-logo child" src="logo.jpg" alt="" width="100" height="100">
             </div>
 
 
